load_balancing_round_robin/envoy.yaml
static_resources:
  listeners: 
  - name: listener_0
    address:
        socket_address: {address:  0.0.0.0, port_value: 8080}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http_proxy
          route_config:
            name: allbackend_cluster
            virtual_hosts:
            - name: allbackend_cluster
              domains: ['*']
              routes:
              - match: { 
                  prefix: "/" 
                }
                route: { 
                  cluster: allbackend_cluster
                }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: allbackend_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: allbackend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: swa_1
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: swa_2
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: swa_3
                port_value: 80
